[package]
name = "dev-tool"
version = "0.1.0"
edition = "2021"
include = ["config/*"]


[dependencies]
log = "0.4"
log4rs = {version = "1.0"  , features = ["gzip"]}

egui = "0.28.1"
eframe = "0.28.1"
rfd = "0.14"
chrono = "0.4"

base64 = "0.22"
flate2 = { version = "1.0" }

uuid = { version = "1", features = ["v4"] }  # 请选择最新稳定版本

serde_json = "1.0"

[[bin]]
name = "dev-tool"
path = "src/main.rs"