[package]
name = "dev-tools"
version = "0.1.0"
edition = "2021"
description = "开发中使用到的各种工具"
license = "GPL-3.0"
authors = ["曾杰"]
build = "build.rs"

[dependencies]
log = "0.4"
log4rs = { version = "1.0", features = ["gzip"] }

egui = "0.28.1"
eframe = "0.28.1"
rfd = "0.14"
chrono = "0.4"

base64 = "0.22"
flate2 = { version = "1.0" }

uuid = { version = "1", features = ["v4"] }  # 请选择最新稳定版本

serde_json = "1.0"

image = "0.25"

[build-dependencies]
# 设置图标
embed-resource =  "1.7.2"